# celestium_blog

./: .env  .gitignore  Dockerfile  manage.py  pyproject.toml
blog/: admin.py  forms.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_post_comment.py  0003_remove_comment_parent_comment_alter_comment_author_and_more.py  0004_alter_comment_options_alter_comment_author_and_more.py  0005_post_image.py  0006_alter_post_author_alter_post_image.py
blog/static/: post.js
blog/templates/: blog.html  post.html
celestium_blog/: asgi.py  settings.py  urls.py  wsgi.py
tailwind_theme/static_src/: package-lock.json
tailwind_theme/templates/: base.html
