[tool.poetry]
name = "celestium-blog"
version = "0.1.0"
description = ""
authors = ["meguowo-lab <file.name.infected@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
